#554 Updating blob to stop extra margin on mobile in WordPress 6.0

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_columns.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/blocks/_columns.scss
@@ -26,6 +26,7 @@ body .wp-block-columns {
 		.alignleft {
 			margin-right: 0;
 			margin-top: 0;
+			margin-inline-end: 0;
 		}
 	}
 }
